src/main/java/com/function/main/grammar/MainFunctionParser.java
// Generated from D:/code/mcfunction_lambdas/src/main/antlr\MainFunctionParser.g4 by ANTLR 4.7.2
package com.function.main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MainFunctionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSERT=1, BREAK=2, BOOL=3, CASE=4, CLASS=5, CONSTRUCTOR=6, CONTINUE=7, 
		DO=8, ELSE=9, FOR=10, GEN=11, IF=12, IN=13, IS=14, LOAD=15, LOG=16, INSTANCE=17, 
		FUNCTION=18, NULL=19, NEW=20, RETURN=21, SWITCH=22, THIS=23, TICK=24, 
		THROW=25, VAR=26, WHILE=27, AND=28, OR=29, GT=30, GE=31, LT=32, LE=33, 
		EQ=34, NE=35, NOT=36, PLUSEQUAL=37, MINUSEQUAL=38, MULTEQUAL=39, DIVIDEEQUAL=40, 
		PLUSPLUS=41, MINUSMINUS=42, POW=43, MULT=44, DIV=45, MOD=46, PLUS=47, 
		MINUS=48, LPAREN=49, RPAREN=50, LBRACE=51, RBRACE=52, LBRACKET=53, RBRACKET=54, 
		EQUAL=55, ELVIS=56, QUESTION=57, DOTDOTDOT=58, DOT=59, SEMI=60, COLON=61, 
		COMMA=62, ARROW=63, OPEN_STRING=64, OPEN_COMMAND=65, NUM=66, IDEN=67, 
		WS=68, NEWLINE=69, COMMENT=70, ENTER_EXPR_INTERP=71, ID_INTERP=72, ESCAPE=73, 
		TEXT=74, CLOSE_STRING=75, ENTER_EXPR_INTERP_COMMAND=76, OPEN_FUNCTION=77, 
		ID_INTERP_COMMAND=78, TEXT_COMMAND=79, NEWLINE_COMMAND=80, EXIT_COMMAND=81, 
		CONTINUE_COMMAND=82;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_line = 2, RULE_assert_line = 3, 
		RULE_ending_line = 4, RULE_function_class = 5, RULE_gen_mcfunction_line = 6, 
		RULE_class_line = 7, RULE_var_modification = 8, RULE_var_definition = 9, 
		RULE_if_statement = 10, RULE_expr_block = 11, RULE_stat_block = 12, RULE_block = 13, 
		RULE_for_loop = 14, RULE_foreach_loop = 15, RULE_while_loop = 16, RULE_do_while_loop = 17, 
		RULE_log_line = 18, RULE_function_call_line = 19, RULE_function_line = 20, 
		RULE_command = 21, RULE_command_part = 22, RULE_expr = 23, RULE_atom = 24, 
		RULE_string_part = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "line", "assert_line", "ending_line", "function_class", 
			"gen_mcfunction_line", "class_line", "var_modification", "var_definition", 
			"if_statement", "expr_block", "stat_block", "block", "for_loop", "foreach_loop", 
			"while_loop", "do_while_loop", "log_line", "function_call_line", "function_line", 
			"command", "command_part", "expr", "atom", "string_part"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'assert'", "'break'", null, "'case'", "'class'", "'constructor'", 
			"'continue'", "'do'", "'else'", "'for'", "'gen'", "'if'", "'in'", "'is'", 
			"'load'", "'log'", "'instance'", "'function'", "'null'", "'new'", "'return'", 
			"'switch'", "'this'", "'tick'", "'throw'", "'var'", "'while'", "'&&'", 
			"'||'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'!'", "'+='", 
			"'-='", "'*='", "'/='", "'++'", "'--'", "'^'", "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "'?:'", "'?'", 
			"'...'", "'.'", "';'", "':'", "','", "'->'", "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSERT", "BREAK", "BOOL", "CASE", "CLASS", "CONSTRUCTOR", "CONTINUE", 
			"DO", "ELSE", "FOR", "GEN", "IF", "IN", "IS", "LOAD", "LOG", "INSTANCE", 
			"FUNCTION", "NULL", "NEW", "RETURN", "SWITCH", "THIS", "TICK", "THROW", 
			"VAR", "WHILE", "AND", "OR", "GT", "GE", "LT", "LE", "EQ", "NE", "NOT", 
			"PLUSEQUAL", "MINUSEQUAL", "MULTEQUAL", "DIVIDEEQUAL", "PLUSPLUS", "MINUSMINUS", 
			"POW", "MULT", "DIV", "MOD", "PLUS", "MINUS", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACKET", "RBRACKET", "EQUAL", "ELVIS", "QUESTION", "DOTDOTDOT", 
			"DOT", "SEMI", "COLON", "COMMA", "ARROW", "OPEN_STRING", "OPEN_COMMAND", 
			"NUM", "IDEN", "WS", "NEWLINE", "COMMENT", "ENTER_EXPR_INTERP", "ID_INTERP", 
			"ESCAPE", "TEXT", "CLOSE_STRING", "ENTER_EXPR_INTERP_COMMAND", "OPEN_FUNCTION", 
			"ID_INTERP_COMMAND", "TEXT_COMMAND", "NEWLINE_COMMAND", "EXIT_COMMAND", 
			"CONTINUE_COMMAND"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MainFunctionParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MainFunctionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MainFunctionParser.EOF, 0); }
		public TerminalNode THIS() { return getToken(MainFunctionParser.THIS, 0); }
		public TerminalNode SEMI() { return getToken(MainFunctionParser.SEMI, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode TICK() { return getToken(MainFunctionParser.TICK, 0); }
		public TerminalNode LOAD() { return getToken(MainFunctionParser.LOAD, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LOAD || _la==TICK) {
				{
				setState(52);
				_la = _input.LA(1);
				if ( !(_la==LOAD || _la==TICK) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(53);
				match(THIS);
				setState(54);
				match(SEMI);
				}
			}

			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSERT) | (1L << BOOL) | (1L << CLASS) | (1L << DO) | (1L << FOR) | (1L << GEN) | (1L << IF) | (1L << LOG) | (1L << FUNCTION) | (1L << NULL) | (1L << THIS) | (1L << VAR) | (1L << WHILE) | (1L << NOT) | (1L << MINUS) | (1L << LPAREN) | (1L << LBRACE) | (1L << LBRACKET))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (OPEN_STRING - 64)) | (1L << (OPEN_COMMAND - 64)) | (1L << (NUM - 64)) | (1L << (IDEN - 64)) | (1L << (NEWLINE_COMMAND - 64)))) != 0)) {
				{
				{
				setState(57);
				statement();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MainFunctionParser.SEMI, 0); }
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Foreach_loopContext foreach_loop() {
			return getRuleContext(Foreach_loopContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public Do_while_loopContext do_while_loop() {
			return getRuleContext(Do_while_loopContext.class,0);
		}
		public Function_classContext function_class() {
			return getRuleContext(Function_classContext.class,0);
		}
		public Function_lineContext function_line() {
			return getRuleContext(Function_lineContext.class,0);
		}
		public Gen_mcfunction_lineContext gen_mcfunction_line() {
			return getRuleContext(Gen_mcfunction_lineContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				line();
				setState(66);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				command();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				if_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				for_loop();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				foreach_loop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				while_loop();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				do_while_loop();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(74);
				function_class();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(75);
				function_line();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(76);
				gen_mcfunction_line();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Var_modificationContext var_modification() {
			return getRuleContext(Var_modificationContext.class,0);
		}
		public Log_lineContext log_line() {
			return getRuleContext(Log_lineContext.class,0);
		}
		public Assert_lineContext assert_line() {
			return getRuleContext(Assert_lineContext.class,0);
		}
		public Function_call_lineContext function_call_line() {
			return getRuleContext(Function_call_lineContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_line);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				var_definition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				var_modification();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				log_line();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				assert_line();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				function_call_line();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assert_lineContext extends ParserRuleContext {
		public TerminalNode ASSERT() { return getToken(MainFunctionParser.ASSERT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Assert_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assert_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitAssert_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assert_lineContext assert_line() throws RecognitionException {
		Assert_lineContext _localctx = new Assert_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assert_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ASSERT);
			setState(87);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ending_lineContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(MainFunctionParser.SEMI, 0); }
		public TerminalNode RETURN() { return getToken(MainFunctionParser.RETURN, 0); }
		public TerminalNode BREAK() { return getToken(MainFunctionParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(MainFunctionParser.CONTINUE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Ending_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ending_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitEnding_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ending_lineContext ending_line() throws RecognitionException {
		Ending_lineContext _localctx = new Ending_lineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ending_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
				{
				setState(89);
				match(RETURN);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << NULL) | (1L << THIS) | (1L << NOT) | (1L << MINUS) | (1L << LPAREN) | (1L << LBRACE) | (1L << LBRACKET))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (OPEN_STRING - 64)) | (1L << (NUM - 64)) | (1L << (IDEN - 64)))) != 0)) {
					{
					setState(90);
					expr(0);
					}
				}

				}
				break;
			case BREAK:
				{
				setState(93);
				match(BREAK);
				}
				break;
			case CONTINUE:
				{
				setState(94);
				match(CONTINUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(97);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_classContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(MainFunctionParser.CLASS, 0); }
		public TerminalNode IDEN() { return getToken(MainFunctionParser.IDEN, 0); }
		public TerminalNode LBRACE() { return getToken(MainFunctionParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(MainFunctionParser.RBRACE, 0); }
		public List<Class_lineContext> class_line() {
			return getRuleContexts(Class_lineContext.class);
		}
		public Class_lineContext class_line(int i) {
			return getRuleContext(Class_lineContext.class,i);
		}
		public Function_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_class; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitFunction_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_classContext function_class() throws RecognitionException {
		Function_classContext _localctx = new Function_classContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(CLASS);
			setState(100);
			match(IDEN);
			setState(101);
			match(LBRACE);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTRUCTOR) | (1L << INSTANCE) | (1L << FUNCTION) | (1L << VAR))) != 0)) {
				{
				{
				setState(102);
				class_line();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Gen_mcfunction_lineContext extends ParserRuleContext {
		public TerminalNode GEN() { return getToken(MainFunctionParser.GEN, 0); }
		public TerminalNode FUNCTION() { return getToken(MainFunctionParser.FUNCTION, 0); }
		public Expr_blockContext expr_block() {
			return getRuleContext(Expr_blockContext.class,0);
		}
		public Gen_mcfunction_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gen_mcfunction_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitGen_mcfunction_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Gen_mcfunction_lineContext gen_mcfunction_line() throws RecognitionException {
		Gen_mcfunction_lineContext _localctx = new Gen_mcfunction_lineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_gen_mcfunction_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(GEN);
			setState(111);
			match(FUNCTION);
			setState(112);
			expr_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_lineContext extends ParserRuleContext {
		public Class_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_line; }
	 
		public Class_lineContext() { }
		public void copyFrom(Class_lineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConstructorClassLineContext extends Class_lineContext {
		public TerminalNode CONSTRUCTOR() { return getToken(MainFunctionParser.CONSTRUCTOR, 0); }
		public TerminalNode LPAREN() { return getToken(MainFunctionParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MainFunctionParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> IDEN() { return getTokens(MainFunctionParser.IDEN); }
		public TerminalNode IDEN(int i) {
			return getToken(MainFunctionParser.IDEN, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MainFunctionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MainFunctionParser.COMMA, i);
		}
		public ConstructorClassLineContext(Class_lineContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitConstructorClassLine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionClassLineContext extends Class_lineContext {
		public TerminalNode FUNCTION() { return getToken(MainFunctionParser.FUNCTION, 0); }
		public List<TerminalNode> IDEN() { return getTokens(MainFunctionParser.IDEN); }
		public TerminalNode IDEN(int i) {
			return getToken(MainFunctionParser.IDEN, i);
		}
		public TerminalNode LPAREN() { return getToken(MainFunctionParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MainFunctionParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode INSTANCE() { return getToken(MainFunctionParser.INSTANCE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MainFunctionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MainFunctionParser.COMMA, i);
		}
		public FunctionClassLineContext(Class_lineContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitFunctionClassLine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstantLineContext extends Class_lineContext {
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MainFunctionParser.SEMI, 0); }
		public TerminalNode INSTANCE() { return getToken(MainFunctionParser.INSTANCE, 0); }
		public ConstantLineContext(Class_lineContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainFunctionParserVisitor ) return ((MainFunctionParserVisitor<? extends T>)visitor).visitConstantLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_lineContext class_line() throws RecognitionException {
		Class_lineContext _localctx = new Class_lineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_class_line);
		int _la;
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new FunctionClassLineContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INSTANCE) {
					{
					setState(114);
					match(INSTANCE);
					}
				}

				setState(117);
				match(FUNCTION);
				setState(118);
				match(IDEN);
				setState(119);
				match(LPAREN);
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDEN) {
					{
					setState(120);
					match(IDEN);
					setState(125);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(121);
						match(COMMA);
						setState(122);
						match(IDEN);
						}
						}
						setState(127);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(130);
				match(RPAREN);
				setState(131);
				block();
				}
				break;
			case 2:
				_localctx = new ConstructorClassLineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(CONSTRUCTOR);
				setState(133);
				match(LPAREN);
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDEN) {
					{
					setState(134);
					match(IDEN);
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(135);
						match(COMMA);
						setState(136);
						match(IDEN);
						}
						}
						setState(141);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}
